@@ -25,7 +25,6 @@ import org.slf4j.LoggerFactory;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 public class CommentController {
 
@@ -51,6 +50,6 @@ public class CommentController {
     public List<Comment> getCommentsForTicket(int ticketId) {
         return comments.stream()
                 .filter(c -> c.getTicketId() == ticketId)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
